# ski-creche

./: .gitignore  README.md  adaptive_growth.py  analyze_noise.py  compare.py  plot_comparison.py  plot_diminishing.py  plot_startd.py
examples/: fineweb_768.py  fineweb_elastic.py  shakespeare.py  vram_compare.py
paper/: RESULTS.md  paper.tex
proofs/: width_detach.py  width_elasticity.py
python/: __init__.py  config.py  db.py  flops.py  interfaces.py  model.py  monitor.py  trainer.py
python/examples/: elastic_depth.py  fineweb.py
rust/: Cargo.toml
rust/examples/: basic.rs  elastic_depth.rs  elastic_width.rs  vram_compare.rs
rust/src/: config.rs  db.rs  flops.rs  lib.rs  model.rs  trainer.rs
scaleup/: RESULTS.md  adaptive_growth.py  paper.tex  plot_diminishing.py  plot_startd.py
